:bug: fix width screen img distortion by width:auto

--- a/src/scss/module/_media.scss
+++ b/src/scss/module/_media.scss
@@ -1,7 +1,7 @@
 img {
   display: block;
   margin: 0.5rem auto;
-  border-style: none;
+  width: auto;
   max-width: 100%;
   max-height: 90vh;
   border-radius: 0.2rem;
@@ -19,6 +19,7 @@ img {
   &[align="right"] {
     padding-left: 20px;
   }
+
   &[align="left"] {
     padding-right: 20px;
   }
